# mudcroft

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  SCHEMA.md  design.md  game_logic_tests.lua  igor-history.md  plan.md  playtest.md
client/: index.html  package-lock.json  package.json  vite.config.ts
docker/: entrypoint.sh  nginx.conf  (+1 more)
mudd/: API.md  Cargo.toml  README.md  admin.md  design.md  langref.md  langtutor.md
mudd/docs/: API.md  admin.md  design.md  langref.md  langtutor.md  permissions.md
mudd/lib/: combat.lua  commands.lua  utils.lua
mudd/src/: init.rs  lib.rs  main.rs  player.rs
mudd/src/api/: auth.rs  images.rs  mod.rs  universe.rs  websocket.rs
mudd/src/auth/: accounts.rs  mod.rs
mudd/src/combat/: damage.rs  dice.rs  effects.rs  mod.rs  state.rs
mudd/src/credits/: mod.rs
mudd/src/db/: mod.rs  test_utils.rs
mudd/src/images/: gen.rs  mod.rs  store.rs
mudd/src/lua/: actions.rs  game_api.rs  messaging.rs  metering.rs  mod.rs  sandbox.rs
mudd/src/objects/: class.rs  mod.rs  object.rs  path.rs  store.rs
mudd/src/permissions/: mod.rs
mudd/src/raft/: config.rs  log_storage.rs.bak  mod.rs  network.rs  snapshot.rs  state_machine.rs  storage.rs  types.rs  writer.rs
mudd/src/theme/: mod.rs
mudd/src/timers/: mod.rs
mudd/src/universe/: mod.rs
mudd/src/venice/: mod.rs
mudd/tests/: integration_test.rs  lua_game_logic_test.rs
mudd/tests/common/: mod.rs
mudd/tests/harness/: client.rs  mod.rs  server.rs  world.rs
mudd/tests/scenarios/: chat.rs  combat.rs  inventory.rs  mod.rs  movement.rs  multiuser.rs  player_lifecycle.rs
(+22 files in other folders)
