[package]
name = "mudd"
version = "0.1.0"
edition = "2021"
description = "HemiMUD server daemon"

[[bin]]
name = "mudd"
path = "src/main.rs"

[[bin]]
name = "mudd_init"
path = "src/bin/init.rs"

[lib]
name = "mudd"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

# Lua scripting
mlua = { version = "0.10", features = ["lua54", "vendored", "async", "serialize"] }

# Consensus (Raft)
openraft = { version = "0.9", features = ["serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
parking_lot = "0.12"

# HTTP client (for Venice AI)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Zip file handling
zip = "2.2"

[dev-dependencies]
tokio-tungstenite = "0.26"
futures-util = "0.3"
tempfile = "3"
